- added AnyPipe to ArrayModule - fixed autocomplete height - fixed select height - fixed dialog not putting loading state to buttons - added DialogService.info - fixed StateComponent not working with @Input with transformers (like coerceBooleanProperty) - added loading to opening the submit modal in the ScoreAddComponent - added reset button (and logic) to the ScoreAddComponent - fixed player not being selected when using the keyboard in the autocomplete ScoreAddPlayerComponent

--- a/src/app/score/score-add/score-add-player/score-add-player.component.html
+++ b/src/app/score/score-add/score-add-player/score-add-player.component.html
@@ -31,7 +31,7 @@
         <bio-autocomplete-option
           *ngFor="let player of players$ | async; trackBy: trackByPlayer"
           [value]="player.personaName"
-          (click)="form.patchValue({ idPlayer: player.id })"
+          (autocompleteSelect)="idPlayerControl.setValue(player.id)"
         >
           {{ player.personaName }}
         </bio-autocomplete-option>
