--- a/src/app/shared/components/autocomplete/autocomplete.component.scss
+++ b/src/app/shared/components/autocomplete/autocomplete.component.scss
@@ -12,6 +12,11 @@
   max-height: calc((35px * 8) + 1rem);
   overflow: auto;
   @include m.elevation(3);
+  @for $i from 1 through 8 {
+    &.height-#{$i} {
+      height: calc((35px * #{$i}) + 1rem);
+    }
+  }
   .autocomplete-option {
     width: 100%;
     text-align: start;
