--- a/src/app/shared/components/modal/dialog/dialog.component.html
+++ b/src/app/shared/components/modal/dialog/dialog.component.html
@@ -1,11 +1,31 @@
 <h5 modalTitle *ngIf="data.title">
-  <icon *ngIf="data.type !== dialogType.confirmation" [ngSwitch]="data.type">
+  <icon *ngIf="!(data.type | any: typesWithoutIcon)" [ngSwitch]="data.type">
     <ng-container *ngSwitchCase="dialogType.success">check_circle_outline</ng-container>
   </icon>
   {{ data.title }}
 </h5>
 <modal-content [innerHTML]="data.content"></modal-content>
-<modal-actions end>
-  <button bioButton primary *ngIf="data.btnNo" (click)="no()" type="button">{{ data.btnNo }}</button>
-  <button bioButton primary *ngIf="data.btnYes" (click)="yes()" type="button">{{ data.btnYes }}</button>
+<modal-actions end *ngIf="state$ | async as state">
+  <button
+    bioButton
+    primary
+    *ngIf="data.btnNo"
+    (click)="no()"
+    type="button"
+    [loading]="state.loadingNo"
+    [disabled]="state.loadingYes"
+  >
+    {{ data.btnNo }}
+  </button>
+  <button
+    bioButton
+    primary
+    *ngIf="data.btnYes"
+    (click)="yes()"
+    type="button"
+    [loading]="state.loadingYes"
+    [disabled]="state.loadingNo"
+  >
+    {{ data.btnYes }}
+  </button>
 </modal-actions>
