- added score approval for players - fixed rare cases of tooltip not being disposed - added focus style to url-preview.component

--- a/src/app/shared/url-preview/url-preview.component.scss
+++ b/src/app/shared/url-preview/url-preview.component.scss
@@ -13,7 +13,8 @@
     text-decoration: none;
   }
   &:hover,
-  &:active {
+  &:active,
+  &:focus {
     .img,
     .body {
       border-color: v.$accent-400;
