--- a/src/app/score/score-shared/score-info/score-info-modal/score-info-modal.component.html
+++ b/src/app/score/score-shared/score-info/score-info-modal/score-info-modal.component.html
@@ -1,5 +1,9 @@
 <modal-content>
-  <bio-score-info [score]="score" [showWorldRecord]="showWorldRecord"></bio-score-info>
+  <bio-score-info
+    [score]="score"
+    [showWorldRecord]="showWorldRecord"
+    [showApprovalDate]="showApprovalDate"
+  ></bio-score-info>
 </modal-content>
 <modal-actions end>
   <button bioButton type="button" (click)="modalRef.close()">Close</button>
