--- a/src/app/score/score-shared/score-approval/score-request-changes-modal/score-request-changes-modal.component.html
+++ b/src/app/score/score-shared/score-approval/score-request-changes-modal/score-request-changes-modal.component.html
@@ -1,10 +1,10 @@
-<form [controlGroup]="form" (groupSubmit)="onSubmit()">
+<form [controlGroup]="form" (groupSubmit)="onSubmit()" *ngLet="saving$ | async as saving">
   <h4 modalTitle>Request changes</h4>
   <modal-content controlArrayName="changes">
     <bio-score-info [score]="score"></bio-score-info>
     <hr />
     <div class="actions">
-      <button bioButton icon tooltip="Add change" type="button" (click)="addChange()">
+      <button bioButton icon tooltip="Add change" type="button" (click)="addChange()" [disabled]="saving">
         <icon>add_circle</icon>
       </button>
     </div>
@@ -21,13 +21,20 @@
         ></textarea>
       </form-field>
       <div class="icon-wrapper">
-        <button bioButton type="button" icon (click)="removeChange($index)" tooltip="Delete change (CTRL + D)">
+        <button
+          bioButton
+          type="button"
+          icon
+          (click)="removeChange($index)"
+          tooltip="Delete change (CTRL + D)"
+          [disabled]="saving"
+        >
           <icon>delete</icon>
         </button>
       </div>
     </div>
   </modal-content>
-  <modal-actions end *ngLet="saving$ | async as saving">
+  <modal-actions end>
     <button [disabled]="form.invalid || !changesControl.length" [loading]="saving" accent bioButton type="submit">
       Submit
     </button>
