- fixed header height - performance improvement in the StateComponent.ngOnChanges - use the state component inputs feature in the url-preview

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -6,7 +6,8 @@
   align-items: center;
   background-color: $accent-300;
   padding: 1rem;
-  min-width: 64px;
+  height: 64px;
+  min-height: 64px;
   > .brand {
     text-decoration: none;
     color: $primary-600;
