- fixed return type of ScoreService.findChangeRequests - fixed button to accessing Score approvals (admin) appearing for everyone - added list of scores in the ScoreChangeRequestsComponent

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,6 +16,7 @@
           routerLink="/admin/approval"
           queryParamsHandling="preserve"
           [bioBadge]="headerQuery.adminApprovalCount$ | async"
+          *ngIf="user.admin"
         >
           <icon>checklist</icon>
           Scores approval (Admin)
@@ -62,6 +63,7 @@
             queryParamsHandling="preserve"
             [bioBadge]="headerQuery.adminApprovalCount$ | async"
             [bioBadgeOverlap]="false"
+            *ngIf="user.admin"
           >
             <icon>checklist</icon>
             Scores approval (Admin)
