--- a/src/app/score/score-shared/score-approval/score-approval.component.scss
+++ b/src/app/score/score-shared/score-approval/score-approval.component.scss
@@ -16,6 +16,10 @@
       flex-basis: 125px;
       flex-grow: 0;
     }
+    .last-updated-date {
+      flex-basis: 140px;
+      flex-grow: 0;
+    }
     .score {
       justify-content: flex-end;
       padding-right: 1.25rem;
