--- a/src/app/score/score-leaderboards/score-leaderboards.component.scss
+++ b/src/app/score/score-leaderboards/score-leaderboards.component.scss
@@ -43,3 +43,10 @@
 .pagination {
   margin-right: 1rem;
 }
+
+.no-params {
+  display: grid;
+  place-items: center;
+  font-weight: bold;
+  font-size: 1.25rem;
+}
