--- a/src/app/score/score-shared/score-approval/score-approval.component.html
+++ b/src/app/score/score-shared/score-approval/score-approval.component.html
@@ -104,11 +104,11 @@
                 <icon small>sync_alt</icon>
               </button>
             </div>
-            <div class="platform">{{ score.platformShortName }}</div>
-            <div class="game">{{ score.gameShortName }}</div>
+            <div class="platform" [tooltip]="score.platformName">{{ score.platformShortName }}</div>
+            <div class="game" [tooltip]="score.gameName">{{ score.gameShortName }}</div>
             <div class="mini-game">{{ score.miniGameName }}</div>
             <div class="mode">{{ score.modeName }}</div>
-            <div class="stage">{{ score.stageShortName }}</div>
+            <div class="stage" [tooltip]="score.stageName">{{ score.stageShortName }}</div>
             <div class="score">{{ score.score | number: '1.0-0' }}</div>
             <div class="creation-date">{{ score.creationDate | authDateFormat }}</div>
             <div class="creation-date">{{ score.lastUpdatedDate | authDateFormat }}</div>
