--- a/src/app/score/score-world-record/score-world-record-table/score-world-record-table.component.scss
+++ b/src/app/score/score-world-record/score-world-record-table/score-world-record-table.component.scss
@@ -1,3 +1,13 @@
 .card {
   margin-bottom: 1rem;
 }
+
+.header {
+  > div {
+    cursor: pointer;
+  }
+  .order-icon {
+    position: absolute;
+    right: 0;
+  }
+}
